--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "multiselect-react-dropdown": "^2.0.22",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-multiple-select-dropdown-lite": "^2.0.5",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.8",
     "react-router-dom": "^6.3.0",
