--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,8 @@
     "flowbite": "^1.4.5",
     "install": "^0.13.0",
     "multiselect-react-dropdown": "^2.0.22",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-multiple-select-dropdown-lite": "^2.0.5",
