--- a/server/api/package.json
+++ b/server/api/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "body": "^5.1.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "morgan": "~1.9.1",
     "mssql": "^8.1.0",
     "mysql": "^2.18.1",
+    "parser": "^0.1.4",
     "tedious": "^14.4.0"
   },
   "proxy": "http://192.168.1.40:3000/"
