--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@material-ui/core": "^4.12.4",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -10,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.21.0",
     "axios": "^0.27.2",
+    "babel-plugin-macros": "^3.1.0",
     "flowbite": "^1.4.5",
     "install": "^0.13.0",
     "material-table": "^2.0.3",
