--- a/my-apps/client/package.json
+++ b/my-apps/client/package.json
@@ -1,37 +1,29 @@
 {
   "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.6",
-    "flowbite": "^1.6.5",
-    "primereact": "^9.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "^5.0.1",
-    "tw-elements": "^1.0.0-beta2",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && sw-precache --config=custom-service-worker.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
+    "flowbite": "^1.6.6",
+    "primereact": "^9.6.0",
+    "react-redux": "^8.1.1",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "^5.0.1",
+    "tw-elements": "^1.0.0-beta2"
   },
   "browserslist": {
     "production": [
@@ -46,6 +38,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.1"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
